index.html modified

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 ---
 <!-- layout: home -->
-author_profile: true
+<!-- author_profile: true -->
+
+layout: home
+
+header:
+  image: /assets/images/yosemiteBW.jpg
+  caption: "Yosemite valley (Summer 2023)"
+
+excerpt: "words here"
+
+classes: wide
 ---
