--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 <!-- layout: home -->
-<!-- author_profile: true -->
 
-layout: home
+layout: splash
+author_profile: true
 
 header:
   image: /assets/images/yosemiteBW.jpg
