--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
 <!-- layout: home -->
 
-layout: home
+<!-- layout: home -->
 author_profile: true
 
-header:
+<!-- header:
   image: /assets/images/yosemiteBW.jpg
   caption: "Yosemite valley (Summer 2023)"
 
 excerpt: "words here"
 
-classes: wide
+classes: wide -->
 ---
